syntax = "proto3";

package score;

option go_package = "github.com/lostwisp/telegram-discord-bridge";

service score{
    rpc UpdScore (ScoreRequest) returns (ScoreResponse);
}

message ScoreRequest{
    int64 score = 1;
}

message ScoreResponse{
    int64 score = 1;
}